@@ -1,3 +1,9 @@
+2003-09-30  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* w3m.el (w3m-use-symbol): Use `w3m-mule-unicode-p'.
+
+	* w3m-symbol.el (w3m-mule-unicode-symbol): Ditto.
+
 2003-09-30  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-proc.el (w3m-process-stop): Redisplay the header-line.
